Better lightning gen and code improvements

--- a/index.html
+++ b/index.html
@@ -9,14 +9,26 @@
 	<script type="text/javascript" src="app.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<style>
-		#mainCanvas {
-			position: absolute;
-			top: 0;
-			left: 0;
-		}
-
 		input[type="range"] {
 			width: 800px;
+		}
+
+		canvas {
+			user-select: none;
+		}
+
+		#mainCanvas {
+			position: fixed;
+			top: 0;
+			left: 0;
+			z-index: 0;
+			display: none;
+		}
+
+		#graphCanvas {
+			z-index: 1;
+			position: fixed;
+			display: none
 		}
 
 		.icon-bar {
@@ -180,7 +192,7 @@
 			<h3>Keys</h3>
 			<table style="width: 1000px">
 				<tr>
-					<td>1 - 8</td>
+					<td>1 - 9</td>
 					<td>Display Modes</td>
 				</tr>
 				<tr>
@@ -228,6 +240,10 @@
 					<td>Show / Hide Sounding Graph</td>
 				</tr>
 				<tr>
+					<td>N</td>
+					<td>Show / Hide Weather Stations</td>
+				</tr>
+				<tr>
 					<td>M</td>
 					<td>Add / Remove Weather Stations</td>
 				</tr>
@@ -269,15 +285,8 @@
 			<i>By Niels Daemen</i>
 		</div>
 	</div>
-	<canvas id="graphCanvas" style="z-index: 1; position: absolute; display: none"></canvas>
-	<canvas id="mainCanvas" style="
-				position: fixed;
-				user-select: none;
-				-webkit-user-select: none;
-				-moz-user-select: none;
-				z-index: 0;
-				display: none;
-			">
+	<canvas id="graphCanvas"></canvas>
+	<canvas id="mainCanvas">
 		Your browser does not support HTML5, you must be using a really old
 		browser!
 	</canvas>
